# spawn

./: README.md  pyproject.toml
lambdas/: list_vm.py
layer/: pyproject.toml
layer/botolayer/: __init__.py  ec2.py  utils.py
layers/: dynamodb.py  ec2.py  route53.py
