[tool.poetry]
name = "spawn2"
version = "0.1.0"
description = "V2 of Spawn using AWS Lambdas / DynamoDB / EC2 / IAM / API Gateway"
authors = ["David Medioni <david.medioni@datapred.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.18.50"
ipdb = "^0.13.9"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.8b0", allow-prereleases = true}
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
