[tool.poetry]
name = "botolayer"
version = "0.1.0"
description = ""
authors = ["Doppledankster <davidmedioni@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
#boto3 = "^1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
